--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@eyevinn/typescript-nodejs",
+  "name": "img-alt-gen",
   "version": "1.0.0",
-  "description": "The default typescript-nodejs template for eyevinn projects",
+  "description": "Generate alt description tag for an image on the fly using OpenAI",
   "scripts": {
     "test": "jest",
     "prepare": "husky install",
