--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "img-alt-gen",
   "version": "1.0.0",
-  "description": "Generate alt description tag for an image on the fly using OpenAI",
+  "description": "Generate alt description tag for an image on-the-fly using OpenAI",
   "scripts": {
     "test": "jest",
     "prepare": "husky install",
@@ -23,6 +23,7 @@
     "@sinclair/typebox": "^0.29.0",
     "fastify": "4.23.2",
     "nodemon": "^2.0.20",
+    "openai": "^4.85.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
